env-vars#1520 edit procedure to create subscription,add timezone example

--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -17,6 +17,8 @@
 
 :example_crd_name: infinispan
 :example_namespace: ispn-namespace
+:subscription_namespace: operators
+:operator_source: community operators
 :pv_path: /opt/infinispan/server/data
 :conf_path: /opt/infinispan/server/conf
 :lib_path: /opt/infinispan/server/lib
@@ -27,7 +29,7 @@
 
 :ispn_operator: Infinispan Operator
 :ispn_operator_version: 2.3
-:operator_channel: 2.3
+:operator_channel: 2.3.x
 :schemaversion: 14.0
 :brandname: Infinispan
 :fullbrandname: Infinispan
