--- a/documentation/asciidoc/topics/proc_adding_labels_annotations_env.adoc
+++ b/documentation/asciidoc/topics/proc_adding_labels_annotations_env.adoc
@@ -12,7 +12,7 @@ Add labels and annotations to your {ispn_operator} subscription with the `spec.c
 +
 [source,options="nowrap",subs=attributes+]
 ----
-{oc_edit} subscription {subscription_name} -n {example_namespace}
+{oc_edit} subscription {subscription_name} -n {subscription_namespace}
 ----
 
 * Use the {openshift} Console.
