--- a/documentation/asciidoc/topics/attributes/downstream-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/downstream-attributes.adoc
@@ -14,6 +14,7 @@
 :example_crd_name: infinispan
 :example_namespace: rhdg-namespace
 :subscription_namespace: openshift-operators
+:source_namespace: openshift-marketplace
 :subscription_name: datagrid
 :operator_source: redhat-operators
 :pv_path: /opt/infinispan/server/data
