updated instructions to wait for Batch CR to complete

--- a/documentation/asciidoc/topics/proc_batching_configmap.adoc
+++ b/documentation/asciidoc/topics/proc_batching_configmap.adoc
@@ -31,6 +31,5 @@ EOF
 +
 [source,options="nowrap",subs=attributes+]
 ----
-kubectl wait --for=jsonpath='{.status.phase}'=Succeeded Batch/mybatch
+{oc_wait} --for=jsonpath='{.status.phase}'=Succeeded Batch/mybatch
 ----
-+
