--- a/documentation/asciidoc/topics/proc_batching_inline.adoc
+++ b/documentation/asciidoc/topics/proc_batching_inline.adoc
@@ -22,4 +22,9 @@ include::yaml/batch_inline.yaml[]
 {oc_apply_cr} mybatch.yaml
 ----
 +
-. Check the `status.Phase` field in the `Batch` CR to verify the operations completed successfully.
+. Wait for the `Batch` CR to succeed.
++
+[source,options="nowrap",subs=attributes+]
+----
+{oc_wait} --for=jsonpath='{.status.phase}'=Succeeded Batch/mybatch
+----
