review of cross-site service account docs for OCP4 #1965

--- a/documentation/asciidoc/stories/assembly_cross_site_replication.adoc
+++ b/documentation/asciidoc/stories/assembly_cross_site_replication.adoc
@@ -21,6 +21,8 @@ include::{topics}/con_cross_site_expose_types.adoc[leveloffset=+1]
 include::{topics}/con_managed_cross_site_connections.adoc[leveloffset=+1]
 include::{topics}/proc_creating_sa_tokens_ocp.adoc[leveloffset=+2]
 include::{topics}/proc_exchanging_sa_tokens.adoc[leveloffset=+2]
+include::{topics}/proc_using_service_account_secret.adoc[leveloffset=+3]
+include::{topics}/proc_using_bound_service_account_token.adoc[leveloffset=+3]
 ifdef::community[]
 include::{topics}/proc_setting_up_cross_site_kube.adoc[leveloffset=+2]
 endif::community[]
