docs update additional resources Fixes #1965

--- a/documentation/asciidoc/topics/proc_exchanging_bound_service_account_tokens.adoc
+++ b/documentation/asciidoc/topics/proc_exchanging_bound_service_account_tokens.adoc
@@ -47,7 +47,7 @@ The `<token-secret>` is the name of the secret configured in the `Infinispan` CR
 
 [discrete]
 == Deleting expired tokens
-When a token expires, delete the expired token, and then repeat the procedure to generate and exchange a new one.
+When a token expires, delete the expired token secret, and then repeat the procedure to generate and exchange a new one.
 
 . Log in to the backup {openshiftshort} cluster.
 
@@ -62,4 +62,4 @@ oc -n <namespace> delete secrets <token-secret>
 
 [role="_additional-resources"]
 .Additional resources
-* link:{link_os_sa_tokens}
+* link:{link_os_sa_bound_tokens}
