--- a/documentation/asciidoc/topics/proc_exchanging_service_account_tokens.adoc
+++ b/documentation/asciidoc/topics/proc_exchanging_service_account_tokens.adoc
@@ -58,4 +58,4 @@ The `<token-secret>` is the name of the secret configured in the `Infinispan` CR
 
 [role="_additional-resources"]
 .Additional resources
-* link:{link_os_sa_bound_tokens}
+* link:{link_os_sa_tokens}
