--- a/documentation/asciidoc/topics/ref_cross_site_tls_secrets.adoc
+++ b/documentation/asciidoc/topics/ref_cross_site_tls_secrets.adoc
@@ -2,7 +2,7 @@
 = Cross-site encryption secrets
 
 [role="_abstract"]
-Cross-site replication encryption secrets add keystores and optional trust stores for securing cross-site connections.
+Cross-site replication encryption secrets add keystores and trust store for securing cross-site connections.
 
 .Cross-site encryption secrets
 [source,options="nowrap",subs=attributes+]
