--- a/documentation/asciidoc/topics/ref_supported_versions.adoc
+++ b/documentation/asciidoc/topics/ref_supported_versions.adoc
@@ -5,99 +5,4 @@
 Since version 2.3.0 {ispn_operator} supports multiple {brandname} Server versions.
 You can upgrade the version of your cluster between supported {brandname} versions:
 
-[%header,cols=2*]
-|===
-| {ispn_operator} version
-| {brandname} Server versions
-
-| 2.3.7
-|
-13.0.10
-14.0.1
-14.0.6
-14.0.9
-14.0.13
-14.0.17
-14.0.19
-14.0.20
-14.0.21
-14.0.24
-14.0.27
-| 2.4.0
-|
-13.0.10
-14.0.1
-14.0.6
-14.0.9
-14.0.13
-14.0.17
-14.0.19
-14.0.20
-14.0.21
-14.0.24
-14.0.27
-15.0.0
-| 2.4.1
-|
-13.0.10
-14.0.1
-14.0.6
-14.0.9
-14.0.13
-14.0.17
-14.0.19
-14.0.20
-14.0.21
-14.0.24
-14.0.27
-15.0.0
-| 2.4.2
-|
-13.0.10
-14.0.1
-14.0.6
-14.0.9
-14.0.13
-14.0.17
-14.0.19
-14.0.20
-14.0.21
-14.0.24
-14.0.27
-15.0.0
-15.0.3
-15.0.4
-| 2.4.3
-|
-14.0.1
-14.0.6
-14.0.9
-14.0.13
-14.0.17
-14.0.19
-14.0.20
-14.0.21
-14.0.24
-14.0.27
-15.0.0
-15.0.3
-15.0.4
-15.0.5
-| 2.4.4
-|
-14.0.1
-14.0.6
-14.0.9
-14.0.13
-14.0.17
-14.0.19
-14.0.20
-14.0.21
-14.0.24
-14.0.27
-14.0.32
-15.0.0
-15.0.3
-15.0.4
-15.0.8
-|===
+include::supported_operands/operand_table.adoc[]
