Add documentation for defining HorizontalPodAutoscaler #2133

--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -13,6 +13,7 @@ include::{stories}/assembly_network_access.adoc[leveloffset=+1]
 include::{stories}/assembly_cross_site_replication.adoc[leveloffset=+1]
 include::{stories}/assembly_monitoring.adoc[leveloffset=+1]
 include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
+include::{stories}/assembly_auto_scaling.adoc[leveloffset=+1]
 include::{stories}/assembly_cache_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_batch_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_backing_up_restoring.adoc[leveloffset=+1]
